unpackaged/main/default/objects/EventApi__Event_Registration_Style__mdt/EventApi__Event_Registration_Style__mdt.object-meta.xml
<CustomObject>
    <description>Stores registration styles for events.</description>
    <label>Event Registration Style</label>
    <pluralLabel>Event Registration Styles</pluralLabel>
</CustomObject>