unpackaged/main/default/objects/EventApi__Event_Registration_Style__mdt/fields/EventApi__Is_Style_Enabled__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Style_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this style will be available on the event builder.</description>
    <inlineHelpText>When checked, this style will be available on the event builder.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>