unpackaged/main/default/objects/EventApi__Event_Registration_Style__mdt/fields/EventApi__Target_Page__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Target_Page__c</fullName>
    <description>**REQUIRED** Name of the lightning/visualforce page that will be used to generate the event&#39;s URL.</description>
    <inlineHelpText>**REQUIRED** Name of the lightning/visualforce page that will be used to generate the event&#39;s URL.</inlineHelpText>
    <label>Target Page</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>